syntax = "proto3";

package core.corepb.v1;

option go_package = "github.com/obolnetwork/charon/core/corepb/v1";

message NegotiateResult {
  repeated NegotiateMsg msgs = 1;
  repeated NegotiateTopic topics = 2;
}

message NegotiateMsg {
  repeated NegotiateTopic topics = 1;
  int64 slot = 2;
  string charon_version = 3;
  string lock_hash = 4;
  string go_os = 5;
  string go_arch = 6;
  string peer_id = 7;
  bytes msg_hash = 8;
  bytes signature = 9;
}

message NegotiateTopic {
  string topic = 1;
  repeated string labels = 2;
}
